<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    android:scrollbars="none">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_product_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8dp"
            android:layout_marginTop="@dimen/_15dp"
            android:text="@string/type"
            android:textColor="@color/purple_700"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8dp"
            android:layout_marginEnd="@dimen/_8dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_product_type">

            <RadioButton
                android:id="@+id/rb_product"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/purple_700"
                android:checked="true"
                android:text="@string/product" />

            <RadioButton
                android:id="@+id/rb_service"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/purple_700"
                android:checked="false"
                android:text="@string/service" />
        </RadioGroup>

        <TextView
            android:id="@+id/tv_product_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8dp"
            android:layout_marginTop="@dimen/_15dp"
            android:text="@string/product_name"
            android:textColor="@color/purple_700"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/radio_group" />

        <EditText
            android:id="@+id/et_product_name"
            android:layout_width="@dimen/_0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8dp"
            android:layout_marginTop="@dimen/_8dp"
            android:layout_marginEnd="@dimen/_8dp"
            android:background="@drawable/bg_edit_text"
            android:hint="@string/product_name"
            android:maxLines="1"
            android:paddingStart="@dimen/_8dp"
            android:paddingTop="@dimen/_12dp"
            android:paddingEnd="@dimen/_8dp"
            android:paddingBottom="@dimen/_12dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_product_name" />

        <TextView
            android:id="@+id/tv_selling_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8dp"
            android:layout_marginTop="@dimen/_15dp"
            android:text="@string/selling_price"
            android:textColor="@color/purple_700"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_product_name" />

        <EditText
            android:id="@+id/et_selling_price"
            android:layout_width="@dimen/_0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8dp"
            android:layout_marginTop="@dimen/_8dp"
            android:layout_marginEnd="@dimen/_4dp"
            android:background="@drawable/bg_edit_text"
            android:drawableStart="@drawable/ic_ruppe_symbol"
            android:hint="@string/selling_price"
            android:inputType="number"
            android:maxLines="1"
            android:paddingStart="@dimen/_8dp"
            android:paddingTop="@dimen/_12dp"
            android:paddingEnd="@dimen/_8dp"
            android:paddingBottom="@dimen/_12dp"
            app:layout_constraintEnd_toStartOf="@id/guideline_vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_selling_price" />

        <TextView
            android:id="@+id/tv_tax_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15dp"
            android:layout_marginEnd="@dimen/_8dp"
            android:text="@string/tax_rate"
            android:textColor="@color/purple_700"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/et_tax_rate"
            app:layout_constraintTop_toBottomOf="@id/et_product_name" />

        <EditText
            android:id="@+id/et_tax_rate"
            android:layout_width="@dimen/_0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_4dp"
            android:layout_marginTop="@dimen/_8dp"
            android:layout_marginEnd="@dimen/_8dp"
            android:background="@drawable/bg_edit_text"
            android:hint="@string/tax_rate"
            android:inputType="number"
            android:maxLines="1"
            android:paddingStart="@dimen/_8dp"
            android:paddingTop="@dimen/_12dp"
            android:paddingEnd="@dimen/_8dp"
            android:paddingBottom="@dimen/_12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/guideline_vertical"
            app:layout_constraintTop_toBottomOf="@id/tv_tax_rate" />

        <TextView
            android:id="@+id/tv_product_images"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8dp"
            android:layout_marginTop="@dimen/_15dp"
            android:text="@string/product_images"
            android:textColor="@color/purple_700"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_selling_price" />

        <TextView
            android:id="@+id/tv_product_images_terms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8dp"
            android:layout_marginTop="@dimen/_15dp"
            android:layout_marginEnd="@dimen/_8dp"
            android:text="@string/product_images_terms"
            android:textColor="@color/purple_700"
            android:textSize="@dimen/_12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_product_images" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_images"
            android:layout_width="@dimen/_0dp"
            android:layout_height="@dimen/_150dp"
            android:layout_marginStart="@dimen/_8dp"
            android:layout_marginTop="@dimen/_8dp"
            android:layout_marginEnd="@dimen/_8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_product_images_terms">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_product_images"
                android:layout_width="@dimen/_0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8dp"
                android:layout_marginBottom="@dimen/_8dp"
                android:padding="@dimen/_4dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/iv_add_product_image"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:itemCount="1"
                tools:listitem="@layout/item_add_product_image" />

            <ImageView
                android:id="@+id/iv_add_product_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8dp"
                android:layout_marginEnd="@dimen/_8dp"
                android:background="?actionBarItemBackground"
                android:contentDescription="@string/add_image"
                android:src="@drawable/ic_add"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/rv_product_images"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/purple_700" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.7" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>